# data-fixer

./: .bazelrc  .env  .gitignore  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  datafixer.code-workspace  manifest.yml  package.json  requirements.in  requirements.txt  rules_docker.pr1650.patch  tsconfig.json
backend/: BUILD.bazel  index.ts  location-gateway.ts
context/browser/: BUILD.bazel  bootstrap.js  index.html  index.ts  mock-data.ts  rollup.config.js
context/server/: BUILD.bazel  index.ts
context/storybook/: BUILD.bazel  index.tsx
context/storybook/.storybook/: main.js
context/storybook/stories/: header.stories.tsx
core/: BUILD.bazel  entities.ts  gateways.ts  index.test.ts  index.ts  routes.ts  services.ts
core/auth/: index.ts
core/auth/impl/: mock.ts
core/data/: entities.ts  gateways.ts  index.ts  services.ts
core/data/impl/: mock.ts
core/util/: simple-event.ts
datafixer/adapters/: BUILD.bazel  web-server.ts
datafixer/adapters/authentication/: BUILD.bazel  mock.ts
datafixer/adapters/dataset/: BUILD.bazel  mock.ts
datafixer/adapters/dataset/knex/: index.ts
datafixer/adapters/dataset/mock/: index.ts
datafixer/adapters/location/: BUILD.bazel  browser.ts  single-page.ts
datafixer/adapters/web-server/: BUILD.bazel  index.ts  passport.ts  sessions.ts
datafixer/backend/: BUILD.bazel  index.ts  location-gateway.ts
datafixer/context/browser/: BUILD.bazel  README.md  index.html  index.ts
datafixer/context/server/: BUILD.bazel  index.ts
datafixer/context/storybook/: BUILD.bazel  index.tsx
datafixer/context/storybook/.storybook/: main.js
datafixer/context/storybook/stories/: header.stories.tsx
datafixer/core/: BUILD.bazel  index.ts  routes.ts
datafixer/core/data/: entities.ts  gateways.ts  services.ts
datafixer/core/util/: simple-event.ts
datafixer/frontend/: BUILD.bazel  helpers.ts  index.tsx  postcss.config.js
datafixer/frontend/components/: data-table.tsx  dataset-project-create-form.tsx  footer.tsx  header.tsx  home.tsx  layout.tsx  link.tsx
datafixer/frontend/hooks/: dataset.ts  location.ts
datafixer/frontend/pages/: dataset-layout.tsx  dataset-project-new.tsx  dataset-project.tsx  dataset-upload.tsx  dataset.tsx  home.tsx  organization.tsx
datafixer/frontend/presenter/: dataset-project.ts  dataset-upload.test.ts  dataset-upload.ts  dataset.ts  home.ts  index.ts  organization.ts  project-create.ts  project.ts  session.test.ts  session.ts
datafixer/jobs/: BUILD.bazel  sample_job.py
datafixer/runtime/browser/: BUILD.bazel  location-gateway.ts
datafixer/runtime/mock/: BUILD.bazel  authentication-gateway.ts  mock-data.ts
datafixer/runtime/node/: BUILD.bazel
datafixer/service-proxies/: BUILD.bazel  index.test.ts  index.ts
datafixer/services/: BUILD.bazel  authentication.ts  dataset.ts  routes.test.ts  routes.ts
db/: README.md  knexfile.js
db/migrations/: 20201029133005_initial.ts
db/seeds/: 01_mock_organizations.ts  02_mock_projects.ts  03_mock_datasets.ts
deployment/: .gitignore  README.md  manage.sh
docs/: architecture.md
frontend/: BUILD.bazel  index.html  index.ts  index.tsx  postcss.config.js  routes.ts  styles.scss
frontend/components/: banner.tsx  data-consumers.tsx  data-info.tsx  data-schema.tsx  data-sources.tsx  data-table.tsx  data-versions.tsx  dataset-layout.tsx  dataset-project-create-form.tsx  dataset-project.tsx  dataset.tsx  footer.tsx  header.tsx  home.tsx  layout.tsx  link.tsx
frontend/hooks/: dataset-project.ts  featured-projects.ts  location.ts  organization.ts  session.ts
frontend/pages/: dataset-layout.tsx  dataset-project-new.tsx  dataset-project.tsx  dataset-upload.tsx  dataset.tsx  organization.tsx
macros/: BUILD.bazel  README.md  ipython.bzl
notebooks/: .gitignore  BUILD.bazel  README.md  tiledb-exploration.ipynb
processors/context/: README.md
processors/context/cli/: BUILD.bazel  README.md  run.py
processors/lib/: README.md
processors/lib/python/: BUILD.bazel  context.py  datasets.py  datasets_test.py
processors/tasks/create_mock_dataset/: BUILD.bazel  command.py  task.py
processors/tasks/python_sample/: BUILD.bazel  command.py  sample_job.py
runtime/browser/: BUILD.bazel  location-gateway.ts
runtime/mock/: BUILD.bazel  dataset-gateway.ts
runtime/node/: BUILD.bazel
tools/: README.md
tools/ipython/: ipython.bzl  shell.py
tools/jupyter/: BUILD.bazel  launch_notebook.py  notebook.bzl
tools/mypy/: mypy.ini
tools/pytest/: BUILD.bazel  pytest.bzl  run_pytest.py
