package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "backend",
    srcs = glob(["**/*.ts"]),
    module_name = "datafixer/backend",
    deps = [
        "//core",
        "//frontend",
        "//runtime/node",
        "@npm//@types/express",
        "@npm//@types/node",
        "@npm//@types/react-dom",
        "@npm//express",
        "@npm//react-dom",
    ],
)
