package(default_visibility=["//visibility:public"])

load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name="lib",
    srcs=glob(
        ["**/*.ts"],
        exclude=["**/*.test.ts"],
    ),
    deps=[],
)

ts_library(
    name="test_lib",
    srcs=glob(["**/*.test.ts"], ),
    deps=[
        ":lib",
        "@npm//@types/jasmine",
    ],
)

filegroup(
    name="test_js",
    srcs=[":test_lib"],
    output_group="es5_sources",
)

jasmine_node_test(
    name="test",
    srcs=[":test_js"],
    deps=[
        ":test_lib",
        "@npm//jasmine",
        "@npm//jasmine-core",
    ],
)
