package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "server",
    srcs = glob(["**/*.ts"]),
    module_name = "datafixer/context/server",
    deps = [
        "//backend",
        "//core",
        "//runtime/mock",
        "//runtime/node",
        "@npm//@types/node",
        "@npm//@types/node-localstorage",
        "@npm//node-localstorage",
    ],
)

nodejs_binary(
    name = "start",
    data = [":server"],
    entry_point = ":index.ts",
)
