package(default_visibility = ["//visibility:public"])

load(
    "@build_bazel_rules_nodejs//:index.bzl",
    "nodejs_binary",
    "npm_package_bin",
)
load("@npm//@bazel/typescript:index.bzl", "ts_library")

filegroup(
    name = "storybook-files",
    srcs = glob([
        ".storybook/**",
        "stories/**",
    ]),
)

filegroup(
    name = "frontend-sources",
    srcs = [
        "//frontend:lib",
    ],
    output_group = "es6_sources",
)

nodejs_binary(
    name = "storybook",
    args = [
        "--port 6006",
        "--config-dir ./context/storybook/.storybook",
    ],
    data = [
        ":storybook-files",
        "//core:lib",
        "//frontend:assets",
        ":frontend-sources",
        "@npm//@storybook/react",
    ],
    entry_point = "@npm//:node_modules/@storybook/react/bin/index.js",
    tags = [
        "ibazel_notify_changes",
    ],
)
