package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "adapters",
    srcs = glob(["**/*.ts"]),
    module_name = "datafixer/adapters",
    deps = [
        "//datafixer/core",
        "//datafixer/frontend",
        "//datafixer/services",
        "@npm//@types/express",
        "@npm//express",
        "@npm//fp-ts",
    ],
)
