package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "service-proxies",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.test.ts"],
    ),
    module_name = "datafixer/service-proxies",
    deps = [
        "//datafixer/services",
        "@npm//fp-ts",
    ],
)

ts_library(
    name = "test_lib",
    srcs = glob(["**/*.test.ts"]),
    deps = [
        ":service-proxies",
        "//datafixer/core",
        "//datafixer/services",
        "@npm//@types/fetch-mock",
        "@npm//@types/jasmine",
        "@npm//fetch-mock",
        "@npm//fp-ts",
    ],
)

filegroup(
    name = "test_js",
    srcs = [":test_lib"],
    output_group = "es5_sources",
)

jasmine_node_test(
    name = "test",
    srcs = [":test_js"],
    deps = [
        ":test_lib",
        "@npm//jasmine",
        "@npm//jasmine-core",
    ],
)
