package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "authentication",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.test.ts"],
    ),
    module_name = "datafixer/adapters/authentication",
    deps = [
        "//datafixer/services",
        "@npm//@types/uuid",
        "@npm//fp-ts",
        "@npm//uuid",
    ],
)
