package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "dataset",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.test.ts"],
    ),
    module_name = "datafixer/adapters/dataset",
    deps = [
        "//datafixer/core",
        "//datafixer/services",
        "@npm//fp-ts",
        "@npm//knex",
    ],
)
