package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "web-server",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.test.ts"],
    ),
    module_name = "datafixer/adapters/web-server",
    deps = [
        "//datafixer/adapters/location",
        "//datafixer/frontend",
        "//datafixer/services",
        "@npm//@types/client-sessions",
        "@npm//@types/cookie-parser",
        "@npm//@types/express",
        "@npm//@types/morgan",
        "@npm//@types/node",
        "@npm//@types/node-jose",
        "@npm//@types/openid-client",
        "@npm//@types/passport",
        "@npm//@types/uuid",
        "@npm//client-sessions",
        "@npm//cookie-parser",
        "@npm//express",
        "@npm//fp-ts",
        "@npm//jose",
        "@npm//morgan",
        "@npm//node-jose",
        "@npm//openid-client",
        "@npm//passport",
        "@npm//uuid",
    ],
)
