load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "cli",
    srcs = ["run.py"],
    args = [],
    main = "run.py",
    deps = [
        requirement("click"),
        "//processors/lib/python",
        "//processors/tasks/create_mock_dataset:command",
    ],
)
