load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("//tools/pytest:pytest.bzl", "pytest_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "python",
    srcs = [
        "__init__.py",
    ],
    deps = [
        ":datasets",
    ],
)

py_library(
    name = "datasets",
    srcs = ["datasets.py"],
    deps = [],
)

pytest_test(
    name = "datasets_test",
    srcs = ["datasets_test.py"],
    deps = [
        ":datasets",
    ],
)
