package(default_visibility = ["//visibility:public"])

load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("//tools/ipython:ipython.bzl", "ipython")
load("//tools/jupyter:notebook.bzl", "notebook")

py_library(
    name = "task",
    srcs = ["task.py"],
    deps = [
        requirement("pandas"),
        "//processors/lib/python",
    ],
)

py_library(
    name = "command",
    srcs = ["command.py"],
    deps = [
        ":task",
    ],
)

py_binary(
    name = "task_bin",
    srcs = ["task.py"],
    main = "task.py",
    deps = [
        ":task",
    ],
)

ipython(
    name = "shell",
    deps = [
        ":task",
    ],
)
